clusters/hetzner/apps/monitoring/loki/app/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-headless
  namespace: monitoring
spec:
  ports:
    - port: 7946
      protocol: TCP
      targetPort: 7946
  selector:
    app.kubernetes.io/name: loki
  type: ClusterIP
  clusterIP: None
