clusters/hetzner/apps/monitoring/loki/app/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: monitoring
  labels:
    app.kubernetes.io/name: loki
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: loki
  type: ClusterIP
