clusters/hetzner/apps/monitoring/loki/app/ingress.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: loki
  namespace: istio-system
spec:
  hosts:
    - loki.infra.behn.dev
  gateways:
    - cluster-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: loki.monitoring.svc.cluster.local
            port:
              number: 80
